syntax = "proto3";

package bookstore.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/tinrab/bomboni/bookstore/v1;bookstore";

// Book represents a book in the bookstore.
message Book {
  // The unique name of the book.
  string name = 1;

  google.protobuf.Timestamp create_time = 2;

  google.protobuf.Timestamp update_time = 3;

  google.protobuf.Timestamp delete_time = 4;

  bool deleted = 5;

  optional string etag = 6;

  string display_name = 7;

  // The author of the book.
  string author = 8;

  // The ISBN of the book.
  string isbn = 9;

  // The description of the book.
  string description = 10;

  // The price of the book in cents.
  int64 price_cents = 11;

  // The number of pages in the book.
  int32 page_count = 12;
}
