syntax = "proto3";

package bookstore.v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";

import "v1/book_resources.proto";

option go_package = "github.com/tinrab/bomboni/bookstore/v1;bookstore";

// BookstoreService provides operations for managing books.
service BookstoreService {
  // Creates a new book.
  rpc CreateBook(CreateBookRequest) returns (Book);

  // Gets a book by ID.
  rpc GetBook(GetBookRequest) returns (Book);

  // Updates a book.
  rpc UpdateBook(UpdateBookRequest) returns (Book);

  // Deletes a book.
  rpc DeleteBook(DeleteBookRequest) returns (google.protobuf.Empty);

  // Lists books.
  rpc ListBooks(ListBooksRequest) returns (ListBooksResponse);

  // Searches books.
  rpc SearchBooks(SearchBooksRequest) returns (SearchBooksResponse);
}

// CreateBookRequest represents a request to create a new book.
message CreateBookRequest {
  // The title of the book.
  string display_name = 1;

  // The author of the book.
  string author = 2;

  // The ISBN of the book.
  string isbn = 3;

  // The description of the book.
  string description = 4;

  // The price of the book in cents.
  int64 price_cents = 5;

  // The number of pages in the book.
  int32 page_count = 6;

  // The publication date of the book.
  google.protobuf.Timestamp published_at = 7;
}

// GetBookRequest represents a request to get a book by name.
message GetBookRequest {
  // The name of the book to retrieve.
  string name = 1;
}

// UpdateBookRequest represents a request to update a book.
message UpdateBookRequest {
  // The name of the book to update.
  string name = 1;

  // The book to update.
  Book book = 2;

  // The field mask indicating which fields to update.
  google.protobuf.FieldMask update_mask = 3;
}

// DeleteBookRequest represents a request to delete a book.
message DeleteBookRequest {
  // The name of the book to delete.
  string name = 1;
}

// ListBooksRequest represents a request to list books.
message ListBooksRequest {
  // The maximum number of books to return.
  optional int32 page_size = 1;

  // The page token returned from a previous request.
  optional string page_token = 2;

  // The filter to apply to the list.
  optional string filter = 3;

  // The order to apply to the list.
  optional string order_by = 4;

  optional bool show_deleted = 5;
}

// ListBooksResponse represents the response from listing books.
message ListBooksResponse {
  // The list of books.
  repeated Book books = 1;

  // The next page token.
  optional string next_page_token = 2;

  // The total number of books matching the request.
  int64 total_size = 3;
}

// SearchBooksRequest represents a request to search books.
message SearchBooksRequest {
  // The search query.
  string query = 1;

  // The maximum number of books to return.
  optional int32 page_size = 2;

  // The page token returned from a previous request.
  optional string page_token = 3;

  // The filter to apply to the search results.
  optional string filter = 4;

  // The order to apply to the search results.
  optional string order_by = 5;
}

// SearchBooksResponse represents the response from searching books.
message SearchBooksResponse {
  // The list of books matching the search query.
  repeated Book books = 1;

  // The next page token.
  optional string next_page_token = 2;

  // The total number of books matching the search query.
  int64 total_size = 3;
}
